--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=0.1.0
 author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
 sentence=Arduino Library for AD5144A
-paragraph=Library to control digital potentiometer AD5241 AD5242 
+paragraph=4 Channel digital potentiometer
 category=Signal Input/Output
 url=https://github.com/RobTillaart/AD5144A
 architectures=*
