--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
 name=AD5144A
-version=0.1.4
+version=0.1.5
 author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
-sentence=Arduino Library for AD5144A
-paragraph=4 Channel digital potentiometer
+sentence=Arduino Library for AD5144A 4 Channel digital potentiometer
+paragraph=Also for AD5123, AD5124, AD5143, AD5144, AD5144A, AD5122A, AD5142A, AD5121, AD5141
 category=Signal Input/Output
-url=https://github.com/RobTillaart/AD5144A
+url=https://github.com/RobTillaart/AD5144A.git
 architectures=*
 includes=AD5144A.h
 depends=
